[tool.poetry]
name = "blockchain_exploration"
version = "0.1.0"
description = "Blockchain exploration by https://ecomunsing.com/build-your-own-blockchain"
authors = ["Matěj Dvořáček <mates.dvoracek@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<4.0"

[tool.poetry.group.dev.dependencies]

# Formatters
#black = "^21.9b0"
#isort = "5.9.3"
## Linters
#flake8 = "4.0.1"
#flake8-black = "0.2.3"
#flake8-bugbear = "21.9.2"
#flake8-isort = "4.1.1"
#flake8-polyfill = "1.0.2"
#pep8-naming = "0.12.1"
#pydocstyle = "*"
#mypy = "0.910"
## versioning
#bumpver = "^2021.1113"
## Testing
#pytest = "^6.2.0"
#pytest-cov = "^3.0.0"
#coverage = "^6.0.2"
## Documentation
#sphinx = "^3.0.0"
#sphinx_rtd_theme = "^0.5.0"
#recommonmark = "^0.6.0"
#pip-audit = "^2.4.3"

[build-system]
requires = ["poetry>=1.3.0"]

build-backend = "poetry.masonry.api"


[bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version} [skip ci on heads]"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"blockchain_exploration/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
