[tool.poetry]
name = "blockchain_exploration"
version = "0.1.0"
description = "Blockchain exploration by https://ecomunsing.com/build-your-own-blockchain"
authors = ["Matěj Dvořáček <mates.dvoracek@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<4.0"

[tool.poetry.group.dev.dependencies]

ruff = "^0.11.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
bumpver = "^2024.1130"

[build-system]
requires = ["poetry>=1.3.0"]

build-backend = "poetry.masonry.api"


[bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version} [skip ci on heads]"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"blockchain_exploration/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
